# art-rc

./: .gitignore  Cargo.toml
glsl/draw-frame/: 1.f.glsl  1.v.glsl
glsl/tools/pencil/: phase.f.glsl  phase.v.glsl
src/: context.rs  frame.rs  lib.rs  pool.rs  tool.rs  touch_list.rs
src/geometry/: color.rs  curve.rs  distance.rs  mix.rs  mod.rs  normal.rs  touch.rs  vector.rs
src/path/: deduplicate.rs  mod.rs  segments.rs  smooth.rs  split.rs  with_neighbours.rs  with_normal.rs  with_offset.rs
src/tools/: mod.rs  spray.rs  wave_brush.rs  wave_pencil.rs
ui/: package-lock.json  package.json  tsconfig.json  webpack.config.js
ui/src/: index.css  index.tsx
ui/src/pages/: clear.tsx  with-canvas.tsx
ui/static/: index.html
